...

}


@Composable
fun ProfileListView(
    profileList: List<Profile> = emptyList(),
    telnyxViewModel: TelnyxViewModel
) {
    Column(verticalArrangement = Arrangement.spacedBy(Dimens.mediumSpacing)) {

        var currentSipId by remember { mutableStateOf("") }

...
